2003-05-31  Murray Cumming  <murrayc@usa.net>

	* configure.in: Depends on GTK+ 2.3.0 now that GTK+ has branched, with
	GTK+ 2.4 in HEAD.
	* configure.in: gmmproc is now installed in a glibmm-2.3 folder
	rather than a glibmm-2.4 folder.
	* gtk/src/alignment.hg: Wrapped new padding functions and properties. 
	Wrote New in GTK+ 2.4 next to them. They need regenerated .defs files,
	but we can do that later.

2003-05-18  Murray Cumming  <murrayc@usa.net>
 
 	* docs/tutorial/gtkmm-tut.xml: TreeView chapter: Replaced some TODOs
 	with short paragraphs. Added copies of the example screenshots to
 	show the list and tree models.

2003-05-14  Murray Cumming  <murrayc@usa.net>

	* Applied some of MSVC++ .NET 2003 changes from jburris. For instance,
	use of Gtk:: prefix with manage, because MSVC++ can not guess it. Also
	corrected the out-of-sync protected/private modifiers in the private
	gtype classes and their prototypes.

2003-05-09  Murray Cumming  <murrayc@usa.net>
 
 	* gtk/src/menushell.[hg|ccg] replace GP_LIST_CONTAINER_REMOVE() with
 	custom-written remove() and erase() MenuList methods, to ensure that
 	we unset the accel widget that we might have set in the MenuItem() 
 	constructor. This avoids a memory leak due to the extra reference.
	* gtk/src/accel_label.[hg|ccg]: Added unset_accel_widget().

2003-05-06  Enrico Costanza  <ec142@york.ac.uk>
 
 	* gtk/src/image.hg: Added "refreturn" to _METHOD_WRAP for get_pixbuf
 	This fixes a bug that caused "(g_object_unref): assertion `G_IS_OBJECT
 	(object)' failed"

2003-05-06  Murray Cumming  <murrayc@usa.net>

	* gtk/src/optionmenu.[hg|ccg]: Implemented a custom destructor which
	calls remove_menu(), to prevent the menu (set with set_menu()), from
	remembering a dead OptionMenu. See the comment in the destructor for
	more details.
	
2003-05-02  Murray Cumming  <murrayc@usa.net>

	* *.hg: Added namespace prefix to all StateType parameter types, 
	because there is one in Atk and in Gtk and that confuses Doxygen.