@@ -52,6 +52,12 @@ CellRenderer* generate_cellrenderer(bool editable = false)
   return pCellRenderer;
 }
 
+template<>
+CellRenderer* generate_cellrenderer<bool>(bool editable);
+
+template<>
+CellRenderer* generate_cellrenderer< Glib::RefPtr<Gdk::Pixbuf> >(bool editable);
+
 #endif /* DOXYGEN_SHOULD_SKIP_THIS */
 
 } //anoymous TreeViewColumn_CellRendererGeneration
