@@ -1,3 +1,13 @@
+2003-06-13  Cedric Gustin  <cedric.gustin@swing.be>
+ 
+         * gtk/src/treeviewcolumn.hg: Added declaration of
+ 	generate_cellrenderer full class specialization for types bool and
+ 	Gdk::Pixbuf. This solves a long-standing bug with treeviews on
+ 	win32. Hopefully, it will also solve bug #113688 on Debian.
+ 	* demos/gtk-demo/example_stockbrowser.cc: Removed GTKMM_WIN32
+ 	compiler directive. On win32, stock icons are not displayed as
+ 	expected in the first column of the treeview.
+	
 2003-05-31  Murray Cumming  <murrayc@usa.net>
 
 	* configure.in: Depends on GTK+ 2.3.0 now that GTK+ has branched, with
